[tool.poetry]
name = "lab-4-espr3ss0"
version = "0.1.0"
description = ""
authors = ["ESPR3SS0 <98864173+ESPR3SS0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
